# AdvancedProgServer

./: README.md
server/: CMakeLists.txt  Command.h  CommandsManager.cpp  CommandsManager.h  FileReader.cpp  FileReader.h  GameHandler.cpp  GameHandler.h  GameStats.cpp  GameStats.h  GamesStatsManager.cpp  GamesStatsManager.h  JoinGameCommand.cpp  JoinGameCommand.h  ListOfGamesCommand.cpp  ListOfGamesCommand.h  OnGoingGamesStatsManager.cpp  OnGoingGamesStatsManager.h  PendingGamesStatsManager.cpp  PendingGamesStatsManager.h  PrintCommand.cpp  PrintCommand.h  ReadFile.cpp  ReadFile.h  Server.cpp  Server.h  StartGameCommand.cpp  StartGameCommand.h  StrCommand.cpp  StrCommand.h  StringCommandParser.cpp  StringCommandParser.h  mainServer.cpp  makefile  makefile~
server/lib/googletest-release-1.8.0/googlemock/include/gmock/: gmock-generated-actions.h  gmock-matchers.h
server/lib/googletest-release-1.8.0/googlemock/scripts/: fuse_gmock_files.py  gmock_doctor.py  upload.py
server/lib/googletest-release-1.8.0/googlemock/test/: gmock-internal-utils_test.cc
server/lib/googletest-release-1.8.0/googletest/samples/: sample6_unittest.cc
server/lib/googletest-release-1.8.0/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py  pump.py
server/lib/googletest-release-1.8.0/googletest/src/: gtest-internal-inl.h  gtest-printers.cc  gtest.cc
server/lib/googletest-release-1.8.0/googletest/test/: gtest-filepath_test.cc  gtest-param-test_test.cc  gtest_prod_test.cc
server/tests/: StrCommand_Test.cpp  Tests.cpp  gtest_main.cpp
(+10 files in other folders)
